# PrivateDPM

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Readme.md
julia_src/: run.jl  run_laplace_experiment.jl  setup.jl
julia_src/MCMC/: Laplace_Experiment.ipynb  neal2.jl  private_neal5.jl  utils.jl
privacy_experiments/: Avis Data.ipynb  CMakeLists.txt  Example Wavelet.ipynb  Plots.ipynb  Untitled.ipynb  Untitled1.ipynb
privacy_experiments/blood_donors/: main.cc
privacy_experiments/blood_donors/params/: algo.asciipb  nnig_ngg.asciipb
privacy_experiments/compare/: main.cc
privacy_experiments/compare/params/: algo.asciipb
privacy_experiments/gaussian/: main.cc
privacy_experiments/gaussian/params/: algo.asciipb
privacy_experiments/global/: main.cc
privacy_experiments/global/params/: bgg_params.asciipb  truncsb.asciipb
privacy_experiments/test_beta_mix/: Untitled.ipynb  main.cc
privacy_experiments/test_beta_mix/params/: algo.asciipb
privacy_experiments/unidimensional_laplace/: main.cc  run_in_torino.sh
privacy_experiments/unidimensional_laplace/params/: algo.asciipb
privacy_experiments/wavelets/: main.cc
privacy_experiments/wavelets/params/: bgg_params.asciipb
